tests/neg/i20946a/Macro_1.scala
import scala.quoted.*

def macroWithAssertFailingImpl[T: Type](t: Expr[T])(using Quotes): Expr[Unit] = {
  import quotes.reflect.*

  TypeIdent(t.asTerm.symbol)

  '{()}
}

